fixed a folder issue with errors

--- a/src/main/resources/templates/error/403.html
+++ b/src/main/resources/templates/error/403.html
@@ -7,7 +7,7 @@
 <div>
   <h1>403 - Forbidden</h1>
   <p>Sorry, you do not have permission to access this page.</p>
-  <a href="/" class="btn">Return Home</a>
+  <a href="/static" class="btn">Return Home</a>
 </div>
 </body>
 </html>
