--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -7,7 +7,7 @@
 <div>
   <h1>500 - Internal Server Error</h1>
   <p>Sorry, something went wrong on our end. Please try again later.</p>
-  <a href="/" class="btn">Return Home</a>
+  <a href="/static" class="btn">Return Home</a>
 </div>
 </body>
 </html>
