--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -7,7 +7,7 @@
 <div>
   <h1>404 - Page Not Found</h1>
   <p>Oops! The page you are looking for does not exist.</p>
-  <a href="/" class="btn">Return Home</a>
+  <a href="/static" class="btn">Return Home</a>
 </div>
 </body>
 </html>
