--- a/src/main/resources/templates/error/error.html
+++ b/src/main/resources/templates/error/error.html
@@ -7,7 +7,7 @@
 <div>
   <h1>An Error Occurred</h1>
   <p>We are unable to process your request at the moment.</p>
-  <a href="/" class="btn">Return Home</a>
+  <a href="/static" class="btn">Return Home</a>
 </div>
 </body>
 </html>
