--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -34,6 +34,9 @@
             <div th:if="${endpoint == 'tools'}">
                 <div th:replace="~{fragments/tool-form :: tool-form}"></div>
             </div>
+            <div th:if="${endpoint == 'competences'}">
+                <div th:replace="~{fragments/competence-form :: competence-form}"></div>
+            </div>
 
         </div>
 
