--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -58,9 +58,24 @@ body {
     display: inline-block;
 }
 
-/* Create New Project Button */
-.create-project {
+/* Create Button */
+.create-button {
     background-color: #e5e7eb; /* gray-200 */
+    color: #000; /* Black */
+    border: none;
+    padding: 0.75rem 1rem;
+    margin: 0.5rem;
+    text-align: center;
+    border-radius: 0.5rem;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+/* Create Button blue */
+.create-button-blue {
+    background-color: #64d6e8; /* gray-200 */
     color: #000; /* Black */
     border: none;
     padding: 0.75rem 1rem;
