Adding: task-details.html task-form.html
Affected:
button.html
content.html
layout.html
ProjectRepository.java
schema.sql
Task.java
TaskController.java
TaskImpl.java
TaskRepository.java
TaskService.java

--- a/src/main/resources/templates/fragments/button.html
+++ b/src/main/resources/templates/fragments/button.html
@@ -18,7 +18,11 @@
 <div th:fragment="project-details">
     <ul>
         <li style="display: flex">
-            <button class="create-project" th:onclick="|window.location.href='@{/tasks/new}'|">Create New Task</button>
+            <!-- Create Task Button -->
+            <button class="create-project"
+                    th:onclick="|window.location.href='@{/tasks/new/{id}(id=${project.id})}'|">
+                Create Task
+            </button>
         </li>
         <li style="display: flex">
             <button class="create-project"
