--- a/src/main/resources/templates/fragments/task-form.html
+++ b/src/main/resources/templates/fragments/task-form.html
@@ -2,6 +2,8 @@
   <h2>Create New Task</h2>
   <form th:action="@{/tasks/save}" th:object="${task}" method="post">
     <input type="hidden" th:field="*{parentId}" />
+    <input type="hidden" th:field="*{isSubTask}" />
+    <input type="hidden" th:field="*{status}" />
 
     <!-- Task Name -->
     <div class="form-group">
@@ -57,7 +59,6 @@
 
     <!-- Action Buttons -->
     <div class="form-actions">
-      <input type="hidden" th:field="*{parentId}" />
       <button type="submit" class="btn-save">Create Task</button>
       <a th:href="@{/projects/{id}(id=${subProjectId})}" class="btn-cancel">Cancel</a>
     </div>
