fixed styling issue due to renaming of style

--- a/src/main/resources/templates/fragments/button.html
+++ b/src/main/resources/templates/fragments/button.html
@@ -24,7 +24,7 @@
     <ul>
         <li style="display: flex">
             <!-- Create Task Button -->
-            <button class="create-project"
+            <button class="create-button"
                     th:onclick="|window.location.href='@{/tasks/new/{id}(id=${project.id})}'|">
                 Create Task
             </button>
